added edit modal

--- a/index.html
+++ b/index.html
@@ -21,14 +21,20 @@
     </header>
     <main>
         <div class="img-gallery-container flex">
-            <div class="img-gallery  grid">
-            </div>
+            <div class="img-gallery  grid"></div>
         </div>
+
+        <div class="edit-modal grid">
+            <canvas class="img-editor"></canvas>
+            <div class="option-container"></div>
+        </div>
+
     </main>
     <footer></footer>
     <script src="js/services/storage.service.js"></script>
     <script src="js/services/edit.service.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/gallery-controller.js"></script>
     <script src="js/meme-controller.js"></script>
     <script src="js/editor.js"></script>
 </body>
