added edit modal layout

--- a/index.html
+++ b/index.html
@@ -26,7 +26,38 @@
 
         <div class="edit-modal grid">
             <canvas class="img-editor"></canvas>
-            <div class="option-container"></div>
+            <div class="option-container grid">
+                <span class="txt-input"><input placeholder="Enter your text.." type="text"></span>
+                <button class="option-up">up</button>
+                <button class="option-down">down</button>
+                <button class="option-plus">plus</button>
+                <button class="option-delete">delete</button>
+                <div class="option-btn-container grid">
+                    <button>A+</button>
+                    <button>A-</button>
+                    <button>align-left</button>
+                    <button>align-center</button>
+                    <button>align-right</button>
+                    <span class="impact"><select type="select">
+                            <option value="1">Impact</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                        </select>
+                    </span>
+                    <button>size</button>
+                    <button>color</button>
+                </div>
+                <div class="sticker-container flex">
+                    <span>🎃</span>
+                    <span>🎃</span>
+                    <span>🎃</span>
+                    <span>🎃</span>
+                    <span>🎃</span>
+                </div>
+                <button class="share">share</button>
+                <button class="download">download</button>
+            </div>
         </div>
 
     </main>
