--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <span class="logo-meme"> Meme</span> Generator
         </h1>
         <span class="search-bar flex">
-            <span>⚔</span>
+            <span class="search-icon"></span>
             <input class="search-input" type="search" placeholder="Search...">
             <button class="search-btn">search</button></span>
     </header>
