--- a/index.html
+++ b/index.html
@@ -14,14 +14,31 @@
         <h1 class="logo">
             <span class="logo-meme"> Meme</span> Generator
         </h1>
-        <span class="search-bar flex">
+        <nav class="top-nav flex">
+            <a href="#gallery">Gallery</a>
+            <a href="#">Memes</a>
+            <a href="#footer">About</a>
+        </nav>
+    </header>
+
+    <nav class="search-nav main-layout flex">
+        <div class="search-bar flex">
             <span class="search-icon"></span>
             <input class="search-input" type="search" placeholder="Search...">
-            <button class="search-btn">search</button></span>
-    </header>
+            <button class="search-btn">search</button>
+        </div>
+        <dev class="key-words  flex">
+            <span>funny</span>
+            <span>ANIMAL</span>
+            <span>men</span>
+            <span>woman</span>
+            <span class="expand">...more</span>
+        </dev>
+    </nav>
+
     <main>
         <div class="img-gallery-container">
-            <div class="img-gallery main-layout grid"></div>
+            <div class="img-gallery main-layout grid" id="gallery"></div>
         </div>
 
         <div class="edit-modal flex main-layout">
@@ -65,7 +82,16 @@
         </div>
 
     </main>
-    <footer></footer>
+    <footer id="footer flex">
+        <div class="footer-grid grid main-layout">
+            <img src="assets/meme-imgs/0.jpg" alt="">
+            <h3>about me</h3>
+            <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolore consequatur eum molestiae
+                accusamus, quia repellat? Porro cumque esse quae, natus, sint eveniet excepturi, quasi doloribus est
+                numquam
+                officia corrupti.</article>
+        </div>
+    </footer>
 
     <script src="js/services/util.service.js"></script>
     <script src="js/services/storage.service.js"></script>
