you can now align txt

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     <button onclick="onFontInc()">A+</button>
                     <button onclick="onFontDec()">A-</button>
                     <button onclick="onAlignLeft()">align-left</button>
-                    <button onclick="onAlignRight()">align-center</button>
-                    <button onclick="onAlignCenter()">align-right</button>
+                    <button onclick="onAlignCenter()">align-center</button>
+                    <button onclick="onAlignRight()">align-right</button>
                     <span class="impact"><select type="select">
                             <option value="1">Impact</option>
                             <option value="2">font</option>
