--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </span>
                 <button onmousedown="onMoveLineUp()" onmouseup="onStopLineUp()" class="option-up">up</button>
                 <button onmousedown="onMoveLineDown()" onmouseup="onStopLineDown()" class="option-down">down</button>
-                <button onclick="onAddLine()" class="option-add">plus</button>
+                <button onclick="onAddLine()" class="option-add">Add New Line</button>
                 <button onclick="on" class="option-delete">delete</button>
                 <div class="option-btn-container grid">
                     <button onclick="onFontInc()">A+</button>
