added delete line feature

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <button onmousedown="onMoveLineUp()" onmouseup="onStopLineUp()" class="option-up">up</button>
                 <button onmousedown="onMoveLineDown()" onmouseup="onStopLineDown()" class="option-down">down</button>
                 <button onclick="onAddLine()" class="option-add">Add New Line</button>
-                <button onclick="on" class="option-delete">delete</button>
+                <button onclick="onDeleteLine()" class="option-delete">Delete</button>
                 <div class="option-btn-container grid">
                     <button onclick="onFontInc()">A+</button>
                     <button onclick="onFontDec()">A-</button>
