adeed sticker support

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                     </span>
                 </div>
                 <div class="sticker-container flex">
-                    <span>🎃</span>
-                    <span>🎃</span>
-                    <span>🎃</span>
-                    <span>🎃</span>
-                    <span>🎃</span>
+                    <span onclick='onStickerSelect(this.innerText)'>😂</span>
+                    <span onclick='onStickerSelect(this.innerText)'>😎</span>
+                    <span onclick='onStickerSelect(this.innerText)'>😍</span>
+                    <span onclick='onStickerSelect(this.innerText)'>😆</span>
+                    <span onclick='onStickerSelect(this.innerText)'>🤢</span>
                 </div>
                 <button class="share">share</button>
                 <button class="download">download</button>
