--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                     <button class="save-option" onclick="onSave()"><img src="assets/svg/save-as.svg"
                             alt="save"></button>
-                    <span class="color-selction flex">
+                    <span class="color-selection flex">
                         <label>Select color:</label>
                         <input oninput="onSetColor(this.value)" type="color" name="favcolor" value="#ffffff">
                         <input oninput="onSetStrokeColor(this.value)" type="color" name="favcolor" value="#000000">
